--- a/index_eng.html
+++ b/index_eng.html
@@ -59,8 +59,8 @@
 				<div class="collapse navbar-collapse">
 					<ul class="nav navbar-nav navbar-right">
 						<li><a href="#top" class="smoothScroll">Home</a></li>
+						<li><a href="#about" class="smoothScroll">Story</a></li>
 						<li><a href="#feature" class="smoothScroll">Features</a></li>
-						<li><a href="#about" class="smoothScroll">About</a></li>
 						<li><a href="#menu" class="smoothScroll">Menu</a></li>
 						<li><a href="#team" class="smoothScroll">Team</a></li>
 						<li><a href="#gallery" class="smoothScroll">Gallery</a></li>
@@ -71,65 +71,15 @@
 			</div>
 		</div>
 
-
-		<!-- Feature section -->
-		<section id="feature" class="parallax-section">
-			<div class="container">
-				<div class="row">
-
-					<div class="col-md-offset-2 col-md-8 col-sm-offset-1 col-sm-10">
-						<div class="wow fadeInUp section-title" data-wow-delay="0.6s">
-							<h2>Why Choose Us?</h2>
-							<h4>Steak House HTML CSS Template</h4>
-						</div>
-					</div>
-
-					<div class="clearfix"></div>
-
-					<div class="col-md-4 col-sm-6 wow fadeInUp" data-wow-delay="0.3s">
-						<div class="feature-thumb">
-							<div class="feature-icon">
-								<span><i class="fa fa-cutlery"></i></span>
-							</div>
-							<h3>SPECIAL DISH</h3>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elitquisque tempus ac eget diam et laoreet phasellus.</p>
-						</div>
-					</div>
-
-					<div class="col-md-4 col-sm-6 wow fadeInUp" data-wow-delay="0.6s">
-						<div class="feature-thumb">
-							<div class="feature-icon">
-								<span><i class="fa fa-coffee"></i></span>
-							</div>
-							<h3>BLACK COFFEE</h3>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elitquisque tempus ac eget diam et laoreet phasellus.</p>
-						</div>
-					</div>
-
-					<div class="col-md-4 col-sm-6 wow fadeInUp" data-wow-delay="0.9s">
-						<div class="feature-thumb">
-							<div class="feature-icon">
-								<span><i class="fa fa-bell-o"></i></span>
-							</div>
-							<h3>DINNER</h3>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elitquisque tempus ac eget diam et laoreet phasellus.</p>
-						</div>
-					</div>
-
-				</div>
-			</div>
-		</section>
-
-
 		<!-- About section -->
 		<section id="about" class="parallax-section">
 			<div class="container">
 				<div class="row">
 
 					<div class="col-md-offset-2 col-md-8 col-sm-offset-1 col-sm-10">
-						<div class="wow fadeInUp section-title" data-wow-delay="0.3s">
-							<h2>Our Story</h2>
-							<h4>Your Dining Restaurant since 1989</h4>
+						<div class="wow fadeInUp section-title" data-wow-delay="0.2s">
+							<h2>Huaikhwang Seafood Story</h2>
+							<h4>Our Restaurant since 1989</h4>
 						</div>
 					</div>
 
@@ -140,7 +90,7 @@
 						<h3>Nunc ullamcorper suscipit neque, ac malesuada purus molestie non.</h3>
 					</div>
 
-					<div class="wow fadeInUp col-md-5 col-sm-7" data-wow-delay="0.5s">
+					<div class="wow fadeInUp col-md-5 col-sm-7" data-wow-delay="0.4s">
 
 						<!-- flexslider -->
 						<div class="flexslider">
@@ -180,7 +130,57 @@
 				</div>
 			</div>
 		</section>
-		<div class="tlinks">Collect from <a href="http://www.cssmoban.com/">网页模板</a></div>
+		<!-- //section -->
+		
+		<!-- Feature section -->
+		<section id="feature" class="parallax-section">
+			<div class="container">
+				<div class="row">
+
+					<div class="col-md-offset-2 col-md-8 col-sm-offset-1 col-sm-10">
+						<div class="wow fadeInUp section-title" data-wow-delay="0.2s">
+							<h2>Why Choose Us?</h2>
+							<h4>Steak House HTML CSS Template</h4>
+						</div>
+					</div>
+
+					<div class="clearfix"></div>
+
+					<div class="col-md-4 col-sm-6 wow fadeInUp" data-wow-delay="0.3s">
+						<div class="feature-thumb">
+							<div class="feature-icon">
+								<span><i class="fa fa-cutlery"></i></span>
+							</div>
+							<h3>SPECIAL DISH</h3>
+							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elitquisque tempus ac eget diam et laoreet phasellus.</p>
+						</div>
+					</div>
+
+					<div class="col-md-4 col-sm-6 wow fadeInUp" data-wow-delay="0.4s">
+						<div class="feature-thumb">
+							<div class="feature-icon">
+								<span><i class="fa fa-coffee"></i></span>
+							</div>
+							<h3>BLACK COFFEE</h3>
+							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elitquisque tempus ac eget diam et laoreet phasellus.</p>
+						</div>
+					</div>
+
+					<div class="col-md-4 col-sm-6 wow fadeInUp" data-wow-delay="0.5s">
+						<div class="feature-thumb">
+							<div class="feature-icon">
+								<span><i class="fa fa-bell-o"></i></span>
+							</div>
+							<h3>DINNER</h3>
+							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elitquisque tempus ac eget diam et laoreet phasellus.</p>
+						</div>
+					</div>
+
+				</div>
+			</div>
+		</section>
+		<!-- //features -->
+		<!-- <div class="tlinks">Collect from <a href="http://www.cssmoban.com/">网页模板</a></div> -->
 
 		<!-- Video section -->
 		<section id="video" class="parallax-section">
