--- a/index_eng.html
+++ b/index_eng.html
@@ -59,7 +59,7 @@
 				<div class="collapse navbar-collapse">
 					<ul class="nav navbar-nav navbar-right">
 						<li><a href="#top" class="smoothScroll">Home</a></li>
-						<li><a href="#about" class="smoothScroll">Story</a></li>
+						<li><a href="#about" class="smoothScroll">My Story</a></li>
 						<li><a href="#feature" class="smoothScroll">Features</a></li>
 						<li><a href="#menu" class="smoothScroll">Menu</a></li>
 						<li><a href="#team" class="smoothScroll">Team</a></li>
