--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 						<h1 class="wow fadeInUp" data-wow-delay="0.6s">HuaiKhwang Seafood</h1>
 						<p class="wow fadeInUp" data-wow-delay="1.0s">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam
 							nonummy nibh euismod tincidunt ut laoreet. Dolore magna aliquam erat volutpat.</p>
-						<a href="index_eng.html" class="wow fadeInUp btn btn-default hvr-bounce-to-top smoothScroll lang-btn" data-wow-delay="1.3s" disabled="disabled">
+						<a href="index_eng.html" class="wow fadeInUp btn btn-default hvr-bounce-to-top smoothScroll lang-btn" data-wow-delay="1.3s">
 							Eng
 						</a>
 						<a class="wow fadeInUp btn btn-default hvr-bounce-to-top smoothScroll lang-btn" data-wow-delay="1.3s" disabled="disabled">
