--- a/subeng/contact.html
+++ b/subeng/contact.html
@@ -105,8 +105,12 @@
 				</div>
 			</div>
 		</section>
+		
+		<!-- map -->
+		<!-- //map -->
 
 		<!-- Footer section -->
+		
 		<footer>
 			<div class="container">
 				<div class="row">
