--- a/subeng/contact.html
+++ b/subeng/contact.html
@@ -59,9 +59,9 @@
 				<div class="collapse navbar-collapse">
 					<ul class="nav navbar-nav navbar-right">
 						<li><a href="index_eng.html" class="smoothScroll">Home</a></li>
-						<li><a href="features.html" class="smoothScroll">Features</a></li>
 						<li><a href="menu.html" class="smoothScroll">Menu</a></li>
 						<li><a href="gallery.html" class="smoothScroll">Gallery</a></li>
+						<li><a href="features.html" class="smoothScroll">Location</a></li>
 						<li><a href="contact.html" class="smoothScroll">Contact</a></li>
 					</ul>
 				</div>
