--- a/subeng/index_eng.html
+++ b/subeng/index_eng.html
@@ -54,14 +54,14 @@
 						<span class="icon icon-bar"></span>
 						<span class="icon icon-bar"></span>
 					</button>
-					<a href="#" class="navbar-brand">HuaiKhwang Seafood</a>
+					<a href="../index.html" class="navbar-brand">HuaiKhwang Seafood</a>
 				</div>
 				<div class="collapse navbar-collapse">
 					<ul class="nav navbar-nav navbar-right">
 						<li><a href="index_eng.html" class="smoothScroll">Home</a></li>
-						<li><a href="features.html" class="smoothScroll">Features</a></li>
 						<li><a href="menu.html" class="smoothScroll">Menu</a></li>
 						<li><a href="gallery.html" class="smoothScroll">Gallery</a></li>
+						<li><a href="features.html" class="smoothScroll">Location</a></li>
 						<li><a href="contact.html" class="smoothScroll">Contact</a></li>
 					</ul>
 				</div>
@@ -71,64 +71,110 @@
 
 		<!-- About section -->
 		<section id="about" class="parallax-section">
-					<div class="container">
-						<div class="row">
-		
-							<!-- <div class="col-md-offset-2 col-md-8 col-sm-offset-1 col-sm-10">
-								<div class="wow fadeInUp section-title" data-wow-delay="0.2s">
-									<h2>Our Seafood Story</h2>
-									<h4>Our Restaurant since 1989</h4>
-								</div>
-							</div>-->
-									
-							<!-- <div class="clearfix"></div> -->
-		
-							<!-- <div class="wow fadeInUp col-md-3 col-sm-5" data-wow-delay="0.3s">
-								<img src="../images/about-img.jpg" class="img-responsive" alt="About">
-								<h3>Nunc ullamcorper suscipit neque, ac malesuada purus molestie non.</h3>
-							</div> -->
-		
-							<div class="wow fadeInUp col-md-9 col-sm-12" data-wow-delay="0.4s">
-								<!-- flexslider -->
-								<div class="flexslider">
-									<ul class="slides">
-										<li>
-											<img src="../images/banner1.png" alt="Flexslider">
-										</li>
-										<li>
-											<img src="../images/banner2.png" alt="Flexslider">
-										</li>
-										<li>
-											<img src="../images/banner3.png" alt="Flexslider">
-										</li>
-									</ul>
-								</div>
-		
-								<!-- <p>
-									Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt. Lorem ipsum
-									dolor sit amet.
-								</p> -->
-							</div>
-		
-							<div class="wow fadeInUp col-md-3 col-sm-12" data-wow-delay="0.9s">
-								<h2>Fine Dining</h2>
-								<p>Steak House is free HTML website template for everyone. Please inform your friends about <a rel="nofollow"
-									 href="#/free-templates" target="_blank">Tooplate</a> site.</p>
-								<p>Vestibulum id iaculis nisl. Pellentesque nec tortor sagittis, scelerisque ante at, sollicitudin leo. Vivamus
-									pulvinar a justo vel lobortis.</p>
-		
-								<ul>
-									<li>Donec fringilla ipsum</li>
-									<li>Integer nec urna</li>
-									<li>Curabitur porta</li>
-								</ul>
-							</div>
-		
+			<div class="container">
+				<div class="row">
+
+					<!-- <div class="col-md-offset-2 col-md-8 col-sm-offset-1 col-sm-10">
+						<div class="wow fadeInUp section-title" data-wow-delay="0.2s">
+							<h2>Our Seafood Story</h2>
+							<h4>Our Restaurant since 1989</h4>
 						</div>
+					</div>-->
+							
+					<!-- <div class="clearfix"></div> -->
+
+					<!-- <div class="wow fadeInUp col-md-3 col-sm-5" data-wow-delay="0.3s">
+						<img src="../images/about-img.jpg" class="img-responsive" alt="About">
+						<h3>Nunc ullamcorper suscipit neque, ac malesuada purus molestie non.</h3>
+					</div> -->
+
+					<div class="wow fadeInUp col-md-9 col-sm-12" data-wow-delay="0.4s">
+						<!-- flexslider -->
+						<div class="flexslider">
+							<ul class="slides">
+								<li>
+									<img src="../images/banner1.png" alt="Flexslider">
+								</li>
+								<li>
+									<img src="../images/banner2.png" alt="Flexslider">
+								</li>
+								<li>
+									<img src="../images/banner3.png" alt="Flexslider">
+								</li>
+							</ul>
+						</div>
+
+						<!-- <p>
+							Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt. Lorem ipsum
+							dolor sit amet.
+						</p> -->
 					</div>
-				</section>
+
+					<div class="wow fadeInUp col-md-3 col-sm-12" data-wow-delay="0.9s">
+						<h2>Fine Dining</h2>
+						<p>Steak House is free HTML website template for everyone. Please inform your friends about <a rel="nofollow"
+							 href="#/free-templates" target="_blank">Tooplate</a> site.</p>
+						<p>Vestibulum id iaculis nisl. Pellentesque nec tortor sagittis, scelerisque ante at, sollicitudin leo. Vivamus
+							pulvinar a justo vel lobortis.</p>
+
+						<ul>
+							<li>Donec fringilla ipsum</li>
+							<li>Integer nec urna</li>
+							<li>Curabitur porta</li>
+						</ul>
+					</div>
+
+				</div>
+			</div>
+		</section>
 		<!-- //section -->
 		<!-- Feature section -->
+		<section id="feature" class="parallax-section">
+			<div class="container">
+				<div class="row">
+					<div class="col-md-offset-2 col-md-8 col-sm-offset-1 col-sm-10">
+						<div class="wow fadeInUp section-title" data-wow-delay="0.2s">
+							<h2>Why Choose Us?</h2>
+							<h4>Steak House HTML CSS Template</h4>
+						</div>
+					</div>
+
+					<div class="clearfix"></div>
+
+					<div class="col-md-4 col-sm-6 wow fadeInUp" data-wow-delay="0.3s">
+						<div class="feature-thumb">
+							<div class="feature-icon">
+								<span><i class="fa fa-cutlery"></i></span>
+							</div>
+							<h3>SPECIAL DISH</h3>
+							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elitquisque tempus ac eget diam et laoreet phasellus.</p>
+						</div>
+					</div>
+
+					<div class="col-md-4 col-sm-6 wow fadeInUp" data-wow-delay="0.4s">
+						<div class="feature-thumb">
+							<div class="feature-icon">
+								<span><i class="fa fa-coffee"></i></span>
+							</div>
+							<h3>BLACK COFFEE</h3>
+							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elitquisque tempus ac eget diam et laoreet phasellus.</p>
+						</div>
+					</div>
+
+					<div class="col-md-4 col-sm-6 wow fadeInUp" data-wow-delay="0.5s">
+						<div class="feature-thumb">
+							<div class="feature-icon">
+								<span><i class="fa fa-bell-o"></i></span>
+							</div>
+							<h3>DINNER</h3>
+							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elitquisque tempus ac eget diam et laoreet phasellus.</p>
+						</div>
+					</div>
+
+				</div>
+			</div>
+		</section>
+		<!-- //features -->
 		<!-- <div class="tlinks">Collect from <a href="http://www.cssmoban.com/">网页模板</a></div> -->
 
 		<!-- Video section -->
