--- a/subeng/menu.html
+++ b/subeng/menu.html
@@ -59,9 +59,9 @@
 				<div class="collapse navbar-collapse">
 					<ul class="nav navbar-nav navbar-right">
 						<li><a href="index_eng.html" class="smoothScroll">Home</a></li>
-						<li><a href="features.html" class="smoothScroll">Features</a></li>
 						<li><a href="menu.html" class="smoothScroll">Menu</a></li>
 						<li><a href="gallery.html" class="smoothScroll">Gallery</a></li>
+						<li><a href="features.html" class="smoothScroll">Location</a></li>
 						<li><a href="contact.html" class="smoothScroll">Contact</a></li>
 					</ul>
 				</div>
@@ -97,7 +97,7 @@
 								<!-- <span class="menu-price">$24</span> -->
 							</div>
 							<div class="media-body">
-								<h3 class="media-heading">Breakfast</h3>
+								<h3 class="media-heading">New Dishes</h3>
 								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elitquisque tempus ac eget diam et.</p>
 							</div>
 						</div>
@@ -108,7 +108,7 @@
 								<!-- <span class="menu-price">$36</span> -->
 							</div>
 							<div class="media-body">
-								<h3 class="media-heading">New Pizza</h3>
+								<h3 class="media-heading">Seafood Recommend</h3>
 								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elitquisque tempus ac eget diam et.</p>
 							</div>
 						</div>
@@ -119,7 +119,7 @@
 								<!-- <span class="menu-price">$24</span> -->
 							</div>
 							<div class="media-body">
-								<h3 class="media-heading">Mushroom</h3>
+								<h3 class="media-heading">Vegetable</h3>
 								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elitquisque tempus ac eget diam et.</p>
 							</div>
 						</div>
@@ -132,7 +132,7 @@
 								<!-- <span class="menu-price">$32</span> -->
 							</div>
 							<div class="media-body">
-								<h3 class="media-heading">Seafood</h3>
+								<h3 class="media-heading">Recommend</h3>
 								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elitquisque tempus ac eget diam et.</p>
 							</div>
 						</div>
@@ -143,7 +143,7 @@
 								<!-- <span class="menu-price">$64</span> -->
 							</div>
 							<div class="media-body">
-								<h3 class="media-heading">Spicy Beef</h3>
+								<h3 class="media-heading">Spicy Food</h3>
 								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elitquisque tempus ac eget diam et.</p>
 							</div>
 						</div>
