nav response fixed, main page fixed, logo img added

--- a/subeng/contact.html
+++ b/subeng/contact.html
@@ -54,7 +54,10 @@
 						<span class="icon icon-bar"></span>
 						<span class="icon icon-bar"></span>
 					</button>
-					<a href="#" class="navbar-brand">HuaiKhwang Seafood</a>
+					<a href="#" class="navbar-brand">
+						<img id="logo-img" src="../images/logo1.png" width="100px"/>
+					</a>	
+					
 				</div>
 				<div class="collapse navbar-collapse">
 					<ul class="nav navbar-nav navbar-right">
@@ -65,7 +68,6 @@
 						<li><a href="contact.html" class="smoothScroll">Contact</a></li>
 					</ul>
 				</div>
-
 			</div>
 		</div>
 
