--- a/subeng/gallery.html
+++ b/subeng/gallery.html
@@ -54,18 +54,20 @@
 						<span class="icon icon-bar"></span>
 						<span class="icon icon-bar"></span>
 					</button>
-					<a href="#" class="navbar-brand">HuaiKhwang Seafood</a>
+					<a href="#" class="navbar-brand">
+						<img id="logo-img" src="../images/logo1.png" width="100px"/>
+					</a>	
+					
 				</div>
 				<div class="collapse navbar-collapse">
 					<ul class="nav navbar-nav navbar-right">
 						<li><a href="index_eng.html" class="smoothScroll">Home</a></li>
-						<li><a href="features.html" class="smoothScroll">Features</a></li>
 						<li><a href="menu.html" class="smoothScroll">Menu</a></li>
 						<li><a href="gallery.html" class="smoothScroll">Gallery</a></li>
+						<li><a href="features.html" class="smoothScroll">Location</a></li>
 						<li><a href="contact.html" class="smoothScroll">Contact</a></li>
 					</ul>
 				</div>
-
 			</div>
 		</div>
 
