--- a/subeng/index_eng.html
+++ b/subeng/index_eng.html
@@ -29,8 +29,8 @@
 		<link rel="stylesheet" type="text/css" href="../css/addition.css"/>
 		
 		<!-- fonts -->
-		<!-- <link href='https://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'> -->
-		<!-- <link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,300,600' rel='stylesheet' type='text/css'> -->
+		<link href='https://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
+		<link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,300,600' rel='stylesheet' type='text/css'>
 
 	</head>
 	<!-- //head -->
@@ -54,7 +54,10 @@
 						<span class="icon icon-bar"></span>
 						<span class="icon icon-bar"></span>
 					</button>
-					<a href="../index.html" class="navbar-brand">HuaiKhwang Seafood</a>
+					<a href="#" class="navbar-brand">
+						<img id="logo-img" src="../images/logo1.png" width="100px"/>
+					</a>	
+					
 				</div>
 				<div class="collapse navbar-collapse">
 					<ul class="nav navbar-nav navbar-right">
@@ -65,10 +68,8 @@
 						<li><a href="contact.html" class="smoothScroll">Contact</a></li>
 					</ul>
 				</div>
-
 			</div>
 		</div>
-
 		<!-- About section -->
 		<section id="about" class="parallax-section">
 			<div class="container">
@@ -134,8 +135,9 @@
 				<div class="row">
 					<div class="col-md-offset-2 col-md-8 col-sm-offset-1 col-sm-10">
 						<div class="wow fadeInUp section-title" data-wow-delay="0.2s">
-							<h2>Why Choose Us?</h2>
-							<h4>Steak House HTML CSS Template</h4>
+							<!-- <img src="../images/200200-01.png"  width="200px"/> -->
+							<h2>HuaiKhwang Seafood</h2>
+							<h4>We offer a wide range of foods for you to choose from.</h4>
 						</div>
 					</div>
 
@@ -146,6 +148,7 @@
 							<div class="feature-icon">
 								<span><i class="fa fa-cutlery"></i></span>
 							</div>
+							<img src="../images/gallery-img4.png" width="300px" />
 							<h3>SPECIAL DISH</h3>
 							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elitquisque tempus ac eget diam et laoreet phasellus.</p>
 						</div>
@@ -156,6 +159,7 @@
 							<div class="feature-icon">
 								<span><i class="fa fa-coffee"></i></span>
 							</div>
+							<img src="../images/gallery-img13.jpg" width="300px" />
 							<h3>BLACK COFFEE</h3>
 							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elitquisque tempus ac eget diam et laoreet phasellus.</p>
 						</div>
@@ -166,6 +170,7 @@
 							<div class="feature-icon">
 								<span><i class="fa fa-bell-o"></i></span>
 							</div>
+							<img src="../images/gallery-img2.jpg" width="300px" />
 							<h3>DINNER</h3>
 							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elitquisque tempus ac eget diam et laoreet phasellus.</p>
 						</div>
