--- a/subeng/index_eng.html
+++ b/subeng/index_eng.html
@@ -135,7 +135,7 @@
 				<div class="row">
 					<div class="col-md-offset-2 col-md-8 col-sm-offset-1 col-sm-10">
 						<div class="wow fadeInUp section-title" data-wow-delay="0.2s">
-							<!-- <img src="../images/200200-01.png"  width="200px"/> -->
+							<!-- <img id="single-logo" src="../images/200200-01.png"/> -->
 							<h2>HuaiKhwang Seafood</h2>
 							<h4>We offer a wide range of foods for you to choose from.</h4>
 						</div>
@@ -148,7 +148,7 @@
 							<div class="feature-icon">
 								<span><i class="fa fa-cutlery"></i></span>
 							</div>
-							<img src="../images/gallery-img4.png" width="300px" />
+							<img src="../images/gallery-img2.png" width="300px" />
 							<h3>SPECIAL DISH</h3>
 							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elitquisque tempus ac eget diam et laoreet phasellus.</p>
 						</div>
@@ -159,7 +159,7 @@
 							<div class="feature-icon">
 								<span><i class="fa fa-coffee"></i></span>
 							</div>
-							<img src="../images/gallery-img13.jpg" width="300px" />
+							<img src="../images/drinks.png" width="300px" />
 							<h3>BLACK COFFEE</h3>
 							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elitquisque tempus ac eget diam et laoreet phasellus.</p>
 						</div>
