--- a/subeng/index_eng.html
+++ b/subeng/index_eng.html
@@ -111,18 +111,27 @@
 						</p> -->
 					</div>
 
-					<div class="wow fadeInUp col-md-3 col-sm-12" data-wow-delay="0.9s">
-						<h2>Fine Dining</h2>
-						<p>Steak House is free HTML website template for everyone. Please inform your friends about <a rel="nofollow"
+					<div id="intro" class="wow fadeInUp col-md-3 col-sm-12" data-wow-delay="0.9s">
+						<h2>Seafood</h2>
+						<p>The HuaiKhwang Seafood was founded in 2018.</p>
+						<p>
+						 The first store opened in the HuaiKhwang area of Bangkok, specializing in Thai specialties and snacks. 
+						 With the concept of delicious, fresh and exquisite cuisine, we have broken the inherent eating habits and made dining more casual. 
+						 </p>
+						 <p>
+						 We select fresh seafood caught in the deep sea of Thailand on the same day and have been thoroughly cleaned.
+						 </p>
+		
+						<!-- <p>Steak House is free HTML website template for everyone. Please inform your friends about <a rel="nofollow"
 							 href="#/free-templates" target="_blank">Tooplate</a> site.</p>
 						<p>Vestibulum id iaculis nisl. Pellentesque nec tortor sagittis, scelerisque ante at, sollicitudin leo. Vivamus
-							pulvinar a justo vel lobortis.</p>
+							pulvinar a justo vel lobortis.</p> -->
 
-						<ul>
+						<!-- <ul>
 							<li>Donec fringilla ipsum</li>
 							<li>Integer nec urna</li>
 							<li>Curabitur porta</li>
-						</ul>
+						</ul> -->
 					</div>
 
 				</div>
@@ -135,7 +144,6 @@
 				<div class="row">
 					<div class="col-md-offset-2 col-md-8 col-sm-offset-1 col-sm-10">
 						<div class="wow fadeInUp section-title" data-wow-delay="0.2s">
-							<!-- <img id="single-logo" src="../images/200200-01.png"/> -->
 							<h2>HuaiKhwang Seafood</h2>
 							<h4>We offer a wide range of foods for you to choose from.</h4>
 						</div>
@@ -160,7 +168,7 @@
 								<span><i class="fa fa-coffee"></i></span>
 							</div>
 							<img src="../images/drinks.png" width="300px" />
-							<h3>BLACK COFFEE</h3>
+							<h3>SPECIAL DRINKS</h3>
 							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elitquisque tempus ac eget diam et laoreet phasellus.</p>
 						</div>
 					</div>
@@ -171,7 +179,7 @@
 								<span><i class="fa fa-bell-o"></i></span>
 							</div>
 							<img src="../images/gallery-img2.jpg" width="300px" />
-							<h3>DINNER</h3>
+							<h3>RECOMMEND</h3>
 							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elitquisque tempus ac eget diam et laoreet phasellus.</p>
 						</div>
 					</div>
@@ -214,11 +222,11 @@
 					<div class="col-md-6 col-sm-12">
 						<div class="media wow fadeInUp" data-wow-delay="0.6s">
 							<div class="media-object pull-left">
-								<img src="../images/gallery-img1.png" class="img-responsive" alt="Food Menu">
+								<img src="../images/gallery-img13.jpg" class="img-responsive" alt="Food Menu">
 								<!-- <span class="menu-price">$24</span> -->
 							</div>
 							<div class="media-body">
-								<h3 class="media-heading">Breakfast</h3>
+								<h3 class="media-heading">Chief Recommend</h3>
 								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elitquisque tempus ac eget diam et.</p>
 							</div>
 						</div>
@@ -229,18 +237,18 @@
 								<!-- <span class="menu-price">$36</span> -->
 							</div>
 							<div class="media-body">
-								<h3 class="media-heading">New Pizza</h3>
+								<h3 class="media-heading">Seafood</h3>
 								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elitquisque tempus ac eget diam et.</p>
 							</div>
 						</div>
 
 						<div class="media wow fadeInUp" data-wow-delay="1.0s">
 							<div class="media-object pull-left">
-								<img src="../images/gallery-img3.png" class="img-responsive" alt="Food Menu">
+								<img src="../images/drink2.png" class="img-responsive" alt="Food Menu">
 								<!-- <span class="menu-price">$24</span> -->
 							</div>
 							<div class="media-body">
-								<h3 class="media-heading">Mushroom</h3>
+								<h3 class="media-heading">Drinks</h3>
 								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elitquisque tempus ac eget diam et.</p>
 							</div>
 						</div>
@@ -253,29 +261,29 @@
 								<!-- <span class="menu-price">$32</span> -->
 							</div>
 							<div class="media-body">
-								<h3 class="media-heading">Seafood</h3>
+								<h3 class="media-heading">Seafood Rcommend</h3>
 								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elitquisque tempus ac eget diam et.</p>
 							</div>
 						</div>
 
 						<div class="media wow fadeInUp" data-wow-delay="1.4s">
 							<div class="media-object pull-left">
-								<img src="../images/gallery-img5.png" class="img-responsive" alt="Food Menu">
+								<img src="../images/special1.jpg" class="img-responsive" alt="Food Menu">
 								<!-- <span class="menu-price">$64</span> -->
 							</div>
 							<div class="media-body">
-								<h3 class="media-heading">Spicy Beef</h3>
+								<h3 class="media-heading">Special Food</h3>
 								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elitquisque tempus ac eget diam et.</p>
 							</div>
 						</div>
 
 						<div class="media wow fadeInUp" data-wow-delay="1.6s">
 							<div class="media-object pull-left">
-								<img src="../images/gallery-img6.png" class="img-responsive" alt="Food Menu">
+								<img src="../images/dessert1.png" class="img-responsive" alt="Food Menu">
 								<!-- <span class="menu-price">$45</span> -->
 							</div>
 							<div class="media-body">
-								<h3 class="media-heading">Dinner</h3>
+								<h3 class="media-heading">Dessert</h3>
 								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elitquisque tempus ac eget diam et.</p>
 							</div>
 						</div>
