food menu fixed 01

--- a/subeng/contact.html
+++ b/subeng/contact.html
@@ -99,36 +99,34 @@
 		<!-- //map -->
 
 		<!-- Footer section -->
-		
 		<footer>
 			<div class="container">
 				<div class="row">
 
 					<div class="wow fadeInUp col-md-4 col-sm-4" data-wow-delay="0.8s">
 						<h3>About the house</h3>
-						<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod
-							tincidunt ut laoreet. Dolore magna aliquam erat volutpat ipsum.</p>
+						<p> Our seafood preparation and cooking is based on Hong Kong, Malaysia, 
+							Singapore and Thai flavour suitable for both local and overseas patrons.</p>
 					</div>
 
 					<div class="wow fadeInUp col-md-4 col-sm-4" data-wow-delay="1.0s">
 						<h3>Contact Detail</h3>
-						<p>123 Delicious Street, San Francisco, CA 10110</p>
-						<p>010-020-0780</p>
-						<p>hello@company.com</p>
+						<p>169/80-81 Ratchadapisek Road, Ratchadapisek, Bangkok 10400</p>
+						<p>TEL:02-275-8819</p>
+						<p>WeChat:huaikhwangseafood</p>
 					</div>
 
 					<div class="wow fadeInUp col-md-4 col-sm-4" data-wow-delay="1.2s">
-						<h3>Opening Hours</h3>
-						<strong>Monday - Firday</strong>
-						<p>11:00 AM - 10:00 PM</p>
-						<strong>Saturday - Sunday</strong>
-						<p>10:00 AM - 09:00 PM</p>
+						<h3>OPEN DAILY</h3>
+						<!-- <strong>Monday - Firday</strong>
+						<p>11:00 AM - 10:00 PM</p> -->
+						<!-- <strong>Saturday - Sunday</strong> -->
+						<p>10:30 AM - 10:30 PM</p>
 					</div>
 
 				</div>
 			</div>
 		</footer>
-
 		<!-- Copyright section -->
 		<section id="copyright">
 			<div class="container">
