--- a/subeng/index_eng.html
+++ b/subeng/index_eng.html
@@ -113,7 +113,7 @@
 					</div>
 
 					<div id="intro" class="wow fadeInUp col-md-3 col-sm-12" data-wow-delay="0.9s">
-						<h2>Our <span class="orange">Seafood</span></h2>
+						<h2>Yummy <span class="orange">Seafood</span></h2>
 						<p>Huai Khwang Seafood Restaurant is established in 2018.</p>
 						<p>
 						Our seafood preparation and cooking is based on Hong Kong, Malaysia, Singapore and Thai flavour suitable for both local and overseas patrons.
@@ -160,7 +160,7 @@
 							</div>
 							<img src="../images/drinks.png" width="300px" />
 							<h3>SPECIAL DRINKS</h3>
-							<p>The special drinks produced by this restaurant taste both mellow and sweet.</p>
+							<p>The special drinks produced by this restaurant taste both mellow and sweet. We offers a wide variety of specialty drinks!</p>
 						</div>
 					</div>
 
@@ -182,7 +182,7 @@
 		<!-- <div class="tlinks">Collect from <a href="http://www.cssmoban.com/">网页模板</a></div> -->
 
 		<!-- Video section -->
-		<section id="video" class="parallax-section">
+		<!-- <section id="video" class="parallax-section">
 			<div class="overlay"></div>
 			<div class="container">
 				<div class="row">
@@ -196,7 +196,7 @@
 
 				</div>
 			</div>
-		</section>
+		</section> -->
 		
 		<!-- Menu section -->
 		<section id="menu" class="parallax-section">
@@ -221,7 +221,7 @@
 								<a href="menu.html">
 									<h3 class="media-heading">Chief Recommend</h3>
 								</a>
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elitquisque tempus ac eget diam et.</p>
+								<p>Our emphasis on all produce also ensures flavourful, seasonal dishes.</p>
 							</div>
 						</div>
 
@@ -234,7 +234,8 @@
 								<a href="menu.html">
 									<h3 class="media-heading">Seafood</h3>
 								</a>
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elitquisque tempus ac eget diam et.</p>
+								<p>Enjoy a simple stylish environment and contemporary menu including fish, lobster, crab and so on!
+								</p>
 							</div>
 						</div>
 
@@ -247,7 +248,7 @@
 								<a href="menu.html">
 								  <h3 class="media-heading">Drinks</h3>
 								</a>
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elitquisque tempus ac eget diam et.</p>
+								<p>Offers a wide range of craft beer (both locally-brewed and imported craft beer), wine and spirits.</p>
 							</div>
 						</div>
 					</div>
@@ -262,7 +263,7 @@
 								<a href="menu.html">
 									<h3 class="media-heading">Seafood Rcommend</h3>
 								</a>
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elitquisque tempus ac eget diam et.</p>
+								<p>It is the wild catch fish and other seafood, the meat is much more smooth and sweet. </p>
 							</div>
 						</div>
 
@@ -275,7 +276,7 @@
 								<a href="menu.html">
 									<h3 class="media-heading">Special Food</h3>
 								</a>
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elitquisque tempus ac eget diam et.</p>
+								<p>You will find a variety of fresh fish, tempting specialities of beef, poultry along with vegetarian</p>
 							</div>
 						</div>
 
@@ -288,7 +289,7 @@
 								<a href="menu.html">
 									<h3 class="media-heading">Dessert</h3>
 								</a>
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elitquisque tempus ac eget diam et.</p>
+								<p>We offer a variety of desserts and fruits for customers.</p>
 							</div>
 						</div>
 					</div>
@@ -305,23 +306,23 @@
 
 					<div class="wow fadeInUp col-md-4 col-sm-4" data-wow-delay="0.8s">
 						<h3>About the house</h3>
-						<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod
-							tincidunt ut laoreet. Dolore magna aliquam erat volutpat ipsum.</p>
+						<p> Our seafood preparation and cooking is based on Hong Kong, Malaysia, 
+							Singapore and Thai flavour suitable for both local and overseas patrons.</p>
 					</div>
 
 					<div class="wow fadeInUp col-md-4 col-sm-4" data-wow-delay="1.0s">
 						<h3>Contact Detail</h3>
-						<p>123 Delicious Street, San Francisco, CA 10110</p>
-						<p>010-020-0780</p>
-						<p>hello@company.com</p>
+						<p>169/80-81 Ratchadapisek Road, Ratchadapisek, Bangkok 10400</p>
+						<p>TEL:02-275-8819</p>
+						<p>WeChat:huaikhwangseafood</p>
 					</div>
 
 					<div class="wow fadeInUp col-md-4 col-sm-4" data-wow-delay="1.2s">
-						<h3>Opening Hours</h3>
-						<strong>Monday - Firday</strong>
-						<p>11:00 AM - 10:00 PM</p>
-						<strong>Saturday - Sunday</strong>
-						<p>10:00 AM - 09:00 PM</p>
+						<h3>OPEN DAILY</h3>
+						<!-- <strong>Monday - Firday</strong>
+						<p>11:00 AM - 10:00 PM</p> -->
+						<!-- <strong>Saturday - Sunday</strong> -->
+						<p>10:30 AM - 10:30 PM</p>
 					</div>
 
 				</div>
