--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-md-offset-2 col-md-8 col-sm-12">
-						<img src="images/20020002-01.png"/>
+						<img class="intropage-logo" src="images/logo-201.png"/>
 						<h1 class="wow fadeInUp" data-wow-delay="0.6s">HuaiKhwang Seafood</h1>
 						<p class="wow fadeInUp" data-wow-delay="1.0s">
 							The most important thing of Thai food is to achieve a perfect balance of all tastes. There are many traditional Thai food factions, and this seafood restaurant inherits the taste and taste of each dish.
