contact wechat，modify the sequence of lang

--- a/subeng/index_eng.html
+++ b/subeng/index_eng.html
@@ -95,13 +95,25 @@
 						<div class="flexslider">
 							<ul class="slides">
 								<li>
-									<img src="../images/banner1.png" alt="Flexslider">
+									<img src="../images/banner/banner1.jpg" alt="Flexslider">
 								</li>
 								<li>
-									<img src="../images/banner2.png" alt="Flexslider">
+									<img src="../images/banner/banner2.jpg" alt="Flexslider">
 								</li>
 								<li>
-									<img src="../images/banner3.png" alt="Flexslider">
+									<img src="../images/banner/banner3.jpg" alt="Flexslider">
+								</li>
+								<li>
+									<img src="../images/banner/banner4.jpg" alt="Flexslider">
+								</li>
+								<li>
+									<img src="../images/banner/banner5.jpg" alt="Flexslider">
+								</li>
+								<li>
+									<img src="../images/banner/banner7.jpg" alt="Flexslider">
+								</li>
+								<li>
+									<img src="../images/banner/banner6.jpg" alt="Flexslider">
 								</li>
 							</ul>
 						</div>
@@ -119,8 +131,9 @@
 						Our seafood preparation and cooking is based on Hong Kong, Malaysia, Singapore and Thai flavour suitable for both local and overseas patrons.
 						</p>
 						<ul>
-							<li>EXCELLENT SERVICE</li>
 							<li>FRESH SEAFOOD</li>
+							<li>GOOD QUALITY</li>
+							<li>EXCELLENT SERVICE</li>
 							<li>VALUE FOR PATRON'S DOLLAR</li>
 						</ul>
 					</div>
@@ -303,22 +316,21 @@
 		<footer>
 			<div class="container">
 				<div class="row">
-
-					<div class="wow fadeInUp col-md-4 col-sm-4" data-wow-delay="0.8s">
-						<h3>About the house</h3>
-						<p> Our seafood preparation and cooking is based on Hong Kong, Malaysia, 
-							Singapore and Thai flavour suitable for both local and overseas patrons.</p>
-					</div>
-
 					<div class="wow fadeInUp col-md-4 col-sm-4" data-wow-delay="1.0s">
 						<h3>Contact Detail</h3>
 						<p>169/80-81 Ratchadapisek Road, Ratchadapisek, Bangkok 10400</p>
 						<p>TEL:02-275-8819</p>
-						<p>WeChat:huaikhwangseafood</p>
+						<p>Email:huaikhwangseafood@gmail.com</p>		
+					</div>
+					
+					<div class="wow fadeInUp col-md-4 col-sm-4" data-wow-delay="0.8s">
+						<h3>Our WeChat</h3>
+						<p>WeChatID:huaikhwangseafood</p>
+						<img src="../images/secode.jpg" style="width: 100px;"/>
 					</div>
 
 					<div class="wow fadeInUp col-md-4 col-sm-4" data-wow-delay="1.2s">
-						<h3>OPEN DAILY</h3>
+						<h3>OPEN EVERYDAY</h3>
 						<!-- <strong>Monday - Firday</strong>
 						<p>11:00 AM - 10:00 PM</p> -->
 						<!-- <strong>Saturday - Sunday</strong> -->
