fixed menu from json data

--- a/subeng/index_eng.html
+++ b/subeng/index_eng.html
@@ -169,7 +169,7 @@
 							<div class="feature-icon">
 								<span><i class="fa fa-cutlery"></i></span>
 							</div>
-							<img src="../images/gallery-img2.png" width="300px" />
+							<img src="../images/gallery-img13.jpg" width="300px" />
 							<h3>SPECIAL DISH</h3>
 							<p>We select fresh seafood caught in the deep sea of Thailand on the same day and have been thoroughly cleaned.</p>
 						</div>
@@ -178,22 +178,22 @@
 					<div class="col-md-4 col-sm-6 wow fadeInUp" data-wow-delay="0.4s">
 						<div class="feature-thumb">
 							<div class="feature-icon">
-								<span><i class="fa fa-coffee"></i></span>
-							</div>
-							<img src="../images/drinks.png" width="300px" />
-							<h3>SPECIAL DRINKS</h3>
-							<p>The special drinks produced by this restaurant taste both mellow and sweet. We offers a wide variety of specialty drinks!</p>
-						</div>
-					</div>
-
-					<div class="col-md-4 col-sm-6 wow fadeInUp" data-wow-delay="0.5s">
-						<div class="feature-thumb">
-							<div class="feature-icon">
 								<span><i class="fa fa-bell-o"></i></span>
 							</div>
 							<img src="../images/gallery-img2.jpg" width="300px" />
 							<h3>RECOMMEND</h3>
 							<p>Spicy, sweet, sour, salty, each taste is on the "tongue", but no one can dominate the taste buds.</p>
+						</div>
+					</div>
+					
+					<div class="col-md-4 col-sm-6 wow fadeInUp" data-wow-delay="0.6s">
+						<div class="feature-thumb">
+							<div class="feature-icon">
+								<span><i class="fa fa-coffee"></i></span>
+							</div>
+							<img src="../images/drinks.jpg" width="300px" />
+							<h3>SPECIAL DRINKS</h3>
+							<p>The special drinks produced by this restaurant taste both mellow and sweet. We offers a wide variety of specialty drinks!</p>
 						</div>
 					</div>
 
@@ -249,7 +249,7 @@
 
 						<div class="media wow fadeInUp" data-wow-delay="0.8s">
 							<div class="media-object pull-left">
-								<img src="../images/gallery-img2.png" class="img-responsive" alt="Food Menu">
+								<img src="../images/gallery-img6.jpg" class="img-responsive" alt="Food Menu">
 								<!-- <span class="menu-price">$36</span> -->
 							</div>
 							<div class="media-body">
@@ -263,7 +263,7 @@
 
 						<div class="media wow fadeInUp" data-wow-delay="1.0s">
 							<div class="media-object pull-left">
-								<img src="../images/drink2.png" class="img-responsive" alt="Food Menu">
+								<img src="../images/drink2.jpg" class="img-responsive" alt="Food Menu">
 								<!-- <span class="menu-price">$24</span> -->
 							</div>
 							<div class="media-body">
@@ -278,7 +278,7 @@
 					<div class="col-md-6 col-sm-12">
 						<div class="media wow fadeInUp" data-wow-delay="1.2s">
 							<div class="media-object pull-left">
-								<img src="../images/gallery-img4.png" class="img-responsive" alt="Food Menu">
+								<img src="../images/gallery-img4-1.jpg" class="img-responsive" alt="Food Menu">
 								<!-- <span class="menu-price">$32</span> -->
 							</div>
 							<div class="media-body">
@@ -304,7 +304,7 @@
 
 						<div class="media wow fadeInUp" data-wow-delay="1.6s">
 							<div class="media-object pull-left">
-								<img src="../images/dessert1.png" class="img-responsive" alt="Food Menu">
+								<img src="../images/dessert1.jpg" class="img-responsive" alt="Food Menu">
 								<!-- <span class="menu-price">$45</span> -->
 							</div>
 							<div class="media-body">
@@ -362,7 +362,7 @@
 					</div>
 
 					<div class="col-md-4 col-sm-4 text-right">
-						<a href="#home" class="fa fa-angle-up smoothScroll gototop"></a>
+						<a href="#" class="fa fa-angle-up smoothScroll gototop"></a>
 					</div>
 
 				</div>
