add cn and thai vision

--- a/index.html
+++ b/index.html
@@ -56,10 +56,10 @@
 						<a class="wow fadeInUp btn btn-default hvr-bounce-to-top smoothScroll lang-btn" data-wow-delay="1.3s" disabled="disabled">
 							ไทย
 						</a>
-						<a href="subeng/index_eng.html" class="wow fadeInUp btn btn-default hvr-bounce-to-top smoothScroll lang-btn" data-wow-delay="1.3s">
+						<a href="subeng/index.html" class="wow fadeInUp btn btn-default hvr-bounce-to-top smoothScroll lang-btn" data-wow-delay="1.3s">
 							Eng
 						</a>
-						<a class="wow fadeInUp btn btn-default hvr-bounce-to-top smoothScroll lang-btn" data-wow-delay="1.3s" disabled="disabled">
+						<a href="subcn/index.html" class="wow fadeInUp btn btn-default hvr-bounce-to-top smoothScroll lang-btn" data-wow-delay="1.3s">
 							中文
 						</a>
 					</div>
