--- a/subthai/aboutus.html
+++ b/subthai/aboutus.html
@@ -61,11 +61,11 @@
 				</div>
 				<div class="collapse navbar-collapse">
 					<ul class="nav navbar-nav navbar-right">
-						<li><a href="index.html" class="smoothScroll">Home</a></li>
-						<li><a href="aboutus.html" class="smoothScroll">About</a></li>
-						<li><a href="menu.html" class="smoothScroll">Menu</a></li>
-						<li><a href="location.html" class="smoothScroll">Location</a></li>
-						<li><a href="contact.html" class="smoothScroll">Contact</a></li>
+						<li><a href="index.html" class="smoothScroll">บ้าน</a></li>
+						<li><a href="aboutus.html" class="smoothScroll">เกี่ยวกับ</a></li>
+						<li><a href="menu.html" class="smoothScroll">เมนู</a></li>
+						<li><a href="location.html" class="smoothScroll">ที่ตั้ง</a></li>
+						<li><a href="contact.html" class="smoothScroll">ติดต่อ</a></li>
 					</ul>
 				</div>
 			</div>
@@ -78,8 +78,8 @@
 					<div class="col-md-12">
 						<div class="col-md-offset-2 col-md-8 col-sm-offset-1 col-sm-10">
 							<div class="wow fadeInUp" data-wow-delay="0.3s">
-								<h2>Our <span class="orange">Restaurant</span></h2>
-								<h4>we have special foods</h4>
+								<h2><span class="orange">ร้านอาหาร</span>ของเรา</h2>
+								<h4>เรามีอาหารพิเศษ</h4>
 							</div>
 						</div>
 					</div>
@@ -98,10 +98,10 @@
 					<div class="col-sm-6 col-sm-12">
 						<div class="wow fadeInUp" data-wow-delay="0.4s">
 							<p class="text-muted">
-								HuaiKhwang Seafood Restaurant is established in 2018. Our First outlet is located at Ratchada Road near HuaiKhwang MRT station. Our seafood preparation and cooking is based on Hong Kong, Malaysia, Singapore and Thai flavour suitable for both local and overseas patrons. 
+								ภัตตาคารห้วยขวางซีฟู้ด ก่อตั้งเมื่อปี พ.ศ. 2561 โดยภัตตาคารแรกของเราตั้งอยู่ที่ถนนรัชดาภิเษกใกล้สถานีรถไฟฟ้าใต้ดินห้วยขวาง
 							</p>
 							<p class="text-muted">
-								We emphasise on serving our patron with fresh, delicious and quality seafood, which they can pick and choose from a wide range of live seafood stocks which are housed in over 30 fish tanks  in our restaurant. 
+								การเตรียมและการปรุงอาหารทะเลของเรานั้นเน้นรสชาติแบบฮ่องกง มาเลเซีย สิงคโปร์ และไทย ซึ่งเหมาะกับผู้มีรสนิยมสูงในการกินทั้งชาวไทยและต่างชาติ   
 							</p>
 						</div>
 					</div>
@@ -115,10 +115,10 @@
 					<div class="col-sm-6 col-sm-12">
 						<div class="wow fadeInUp" data-wow-delay="0.4s">
 							<p class="text-muted">
-								Seafood such as lobster, Alaska Crab, shellfish, clams and fish is procured live, selectively from reliable sources.
+								เรายังเน้นการเสิร์ฟอาหารทะเลที่สด อร่อย และมีคุณภาพดีให้แก่ลูกค้า โดยสามารถเลือกได้จากตู้ปลากว่า 30 ตู้ซึ่งมีอาหารทะเลให้เลือกอย่างมากมาย ภัตตาคารของเราเก็บรักษาอาหารทะเลต่าง ๆ เช่น ล็อบสเตอร์ ปูอลาสกา กุ้ง หอย แบบสดๆ ซึ่งนำเข้าจากต่างประเทศที่ได้มาตรฐานและน่าเชื่อถือ
 							</p>
 							<p class="text-muted">
-								Our seafood is prepared by a group of very dedicated and professional cook led by International and local Celebrity Chef whose burning passion and pride is to serve patron with special, breakthrough seafood experience that is unique and first class, unlike others in the region. 
+								เรามีเชฟที่ใส่ใจต่อการปรุงอาหารทะเลอย่างพิถีพิถัน นำโดยเชฟชื่อดังซึ่งเป็นที่รู้จักทั้งในประเทศและต่างประเทศพร้อมนำเสนออาหารทะเลจานพิเศษอันเป็นเอกลักษณ์เฉพาะไม่เหมือนใคร
 							</p>
 						</div>
 					</div>
@@ -142,10 +142,13 @@
 					<div class="col-sm-6 col-sm-12">
 						<div class="wow fadeInUp" data-wow-delay="0.6s">
 							<p class="text-muted">
-								Through our original yet innovative recipe right from preparation, flavouring, arrangement to serving, each dish is carefully designed to  tease and entice every patron's palate for their utmost, unforgettable seafood satisfaction at HuaiKhwang Restaurant. 
+								ด้วยสูตรอาหารแบบดั้งเดิมแต่สร้างสรรค์ทุกขั้นตอนตั้งแต่การเตรียม การปรุงรส การตกแต่งอาหาร ไปจนกระทั่งการเสิร์ฟ อาหารแต่ละจานผ่านการออกแบบอย่างพิถีพิถันเพื่อให้ลูกค้าได้ลิ้มรสอาหารทะเลรสชาติอันดีเยี่ยม 
 							</p>
 							<p class="text-muted">
-								With our EXCELLENT SERVICE, FRESH SEAFOOD and VALUE FOR PATRON’S dollar, HuaiKhwang Restaurant welcomes you to an unforgettable, mouth-watering and satisfying seafood experience with us.
+								ภัตตาคารห้วยขวางซีฟู้ดให้บริการชั้นเยี่ยมและเสิร์ฟอาหารทะเลสดใหม่ในราคาอันแสนคุ้มค่า
+							</p>
+							<p class="text-muted">
+								เราพร้อมต้อนรับทุกท่านเข้าสู่ประสบการณ์การรับประทานอาหารทะเลรสเลิศจนลืมไม่ลง 
 							</p>
 						</div>
 					</div>
