--- a/subeng/contact.html
+++ b/subeng/contact.html
@@ -61,7 +61,7 @@
 				</div>
 				<div class="collapse navbar-collapse">
 					<ul class="nav navbar-nav navbar-right">
-						<li><a href="index_eng.html" class="smoothScroll">Home</a></li>
+						<li><a href="index.html" class="smoothScroll">Home</a></li>
 						<li><a href="aboutus.html" class="smoothScroll">About</a></li>
 						<li><a href="menu.html" class="smoothScroll">Menu</a></li>
 						<li><a href="location.html" class="smoothScroll">Location</a></li>
