--- a/subeng/menu.html
+++ b/subeng/menu.html
@@ -61,7 +61,7 @@
 				</div>
 				<div class="collapse navbar-collapse">
 					<ul class="nav navbar-nav navbar-right">
-						<li><a href="index_eng.html" class="smoothScroll">Home</a></li>
+						<li><a href="index.html" class="smoothScroll">Home</a></li>
 						<li><a href="aboutus.html" class="smoothScroll">About</a></li>
 						<li><a href="menu.html" class="smoothScroll">Menu</a></li>
 						<li><a href="location.html" class="smoothScroll">Location</a></li>
@@ -112,6 +112,8 @@
 								<li><a href="#" class="opc-main-bg" data-filter=".de">Dessert</a></li>
 							</ul>
 
+							<!-- sel-lang -->
+							<span id="sel-lang" class="en"></span>
 							<!-- iso box section -->
 							<div class="iso-box-section wow fadeInUp" data-wow-delay="0.9s">
 								<div class="iso-box-wrapper col4-iso-box">
