--- a/subthai/index.html
+++ b/subthai/index.html
@@ -61,11 +61,11 @@
 				</div>
 				<div class="collapse navbar-collapse">
 					<ul class="nav navbar-nav navbar-right">
-						<li><a href="index_eng.html" class="smoothScroll">Home</a></li>
-						<li><a href="aboutus.html" class="smoothScroll">About</a></li>
-						<li><a href="menu.html" class="smoothScroll">Menu</a></li>
-						<li><a href="location.html" class="smoothScroll">Location</a></li>
-						<li><a href="contact.html" class="smoothScroll">Contact</a></li>
+						<li><a href="index.html" class="smoothScroll">บ้าน</a></li>
+						<li><a href="aboutus.html" class="smoothScroll">เกี่ยวกับ</a></li>
+						<li><a href="menu.html" class="smoothScroll">เมนู</a></li>
+						<li><a href="location.html" class="smoothScroll">ที่ตั้ง</a></li>
+						<li><a href="contact.html" class="smoothScroll">ติดต่อ</a></li>
 					</ul>
 				</div>
 			</div>
@@ -135,9 +135,9 @@
 
 					<div id="intro" class="wow fadeInUp col-md-3 col-sm-12" data-wow-delay="0.9s">
 						<h2>Yummy <span class="orange">Seafood</span></h2>
-						<p>Huai Khwang Seafood Restaurant is established in 2018.</p>
+						<p>ภัตตาคารห้วยขวางซีฟู้ด ก่อตั้งเมื่อปี พ.ศ. 2561 โดยภัตตาคารแรกของเราตั้งอยู่ที่ถนนรัชดาภิเษกใกล้สถานีรถไฟฟ้าใต้ดินห้วยขวาง</p>
 						<p>
-						Our seafood preparation and cooking is based on Hong Kong, Malaysia, Singapore and Thai flavour suitable for both local and overseas patrons.
+							การเตรียมและการปรุงอาหารทะเลของเรานั้นเน้นรสชาติแบบฮ่องกง มาเลเซีย สิงคโปร์ และไทย ซึ่งเหมาะกับผู้มีรสนิยมสูงในการกินทั้งชาวไทยและต่างชาติ
 						</p>
 						<ul>
 							<li>FRESH SEAFOOD</li>
