--- a/subthai/location.html
+++ b/subthai/location.html
@@ -61,11 +61,11 @@
 				</div>
 				<div class="collapse navbar-collapse">
 					<ul class="nav navbar-nav navbar-right">
-						<li><a href="index.html" class="smoothScroll">Home</a></li>
-						<li><a href="aboutus.html" class="smoothScroll">About</a></li>
-						<li><a href="menu.html" class="smoothScroll">Menu</a></li>
-						<li><a href="location.html" class="smoothScroll">Location</a></li>
-						<li><a href="contact.html" class="smoothScroll">Contact</a></li>
+						<li><a href="index.html" class="smoothScroll">บ้าน</a></li>
+						<li><a href="aboutus.html" class="smoothScroll">เกี่ยวกับ</a></li>
+						<li><a href="menu.html" class="smoothScroll">เมนู</a></li>
+						<li><a href="location.html" class="smoothScroll">ที่ตั้ง</a></li>
+						<li><a href="contact.html" class="smoothScroll">ติดต่อ</a></li>
 					</ul>
 				</div>
 			</div>
