--- a/subcn/index.html
+++ b/subcn/index.html
@@ -124,6 +124,9 @@
 								<li>
 									<img src="../images/banner/banner10.jpg" alt="Flexslider">
 								</li>
+								<li>
+									<img src="../images/banner/banner11.jpg" alt="Flexslider">
+								</li>
 							</ul>
 						</div>
 
