--- a/subthai/aboutus.html
+++ b/subthai/aboutus.html
@@ -162,20 +162,20 @@
 			<div class="container">
 				<div class="row">
 					<div class="wow fadeInUp col-md-4 col-sm-4" data-wow-delay="1.0s">
-						<h3>Contact Detail</h3>
-						<p>169/80-81 Ratchadapisek Road, Ratchadapisek, Bangkok 10400</p>
-						<p>TEL:02-275-8819</p>
-						<p>Email:huaikhwangseafood@gmail.com</p>		
+						<h3>ติดต่อ</h3>
+						<p>169/80-81 ถนน รัชดาภิเษก แขวงรัชดาภิเษก เขตดินแดง กทม 10400</p>
+						<p>โทรศัพท์:02-275-8819</p>
+						<p>อีเมล์:huaikhwangseafood@gmail.com</p>		
 					</div>
 					
 					<div class="wow fadeInUp col-md-4 col-sm-4" data-wow-delay="0.8s">
-						<h3>OFFICAL WeChat</h3>
-						<p>WeChatID:huaikhwangseafood</p>
+						<h3>WeChat อย่างเป็นทางการ</h3>
+						<p>WeChat ID:huaikhwangseafood</p>
 						<img src="../images/secode.jpg" style="width: 100px;"/>
 					</div>
 
 					<div class="wow fadeInUp col-md-4 col-sm-4" data-wow-delay="1.2s">
-						<h3>OPEN EVERYDAY</h3>
+						<h3>ทุกวันเปิด</h3>
 						<!-- <strong>Monday - Firday</strong>
 						<p>11:00 AM - 10:00 PM</p> -->
 						<!-- <strong>Saturday - Sunday</strong> -->
@@ -185,6 +185,7 @@
 				</div>
 			</div>
 		</footer>
+
 		<!-- Copyright section -->
 		<section id="copyright">
 			<div class="container">
