--- a/index.html
+++ b/index.html
@@ -50,10 +50,11 @@
 					<div class="col-md-offset-2 col-md-8 col-sm-12">
 						<img class="intropage-logo" src="images/logo-201.png"/>
 						<h1 class="wow fadeInUp" data-wow-delay="0.6s">HuaiKhwang Seafood</h1>
+						<!-- <h2 class="wow fadeInUp" data-wow-delay="0.6s">ภัตตาคาร ห้วยขวาง ซีฟู้ด</h2> -->
 						<p class="wow fadeInUp" data-wow-delay="1.0s">
 							The most important thing of Thai food is to achieve a perfect balance of all tastes. There are many traditional Thai food factions, and this seafood restaurant inherits the taste and taste of each dish.
 						</p>
-						<a class="wow fadeInUp btn btn-default hvr-bounce-to-top smoothScroll lang-btn" data-wow-delay="1.3s" disabled="disabled">
+						<a href="subthai/index.html" class="wow fadeInUp btn btn-default hvr-bounce-to-top smoothScroll lang-btn" data-wow-delay="1.3s">
 							ไทย
 						</a>
 						<a href="subeng/index.html" class="wow fadeInUp btn btn-default hvr-bounce-to-top smoothScroll lang-btn" data-wow-delay="1.3s">
