--- a/subthai/contact.html
+++ b/subthai/contact.html
@@ -75,18 +75,17 @@
 			<div class="overlay"></div>
 			<div class="container">
 				<div class="row">
-
 					<div class="col-md-offset-2 col-md-8 col-sm-offset-1 col-sm-10">
 						<div class="wow fadeInUp section-title" data-wow-delay="0.3s">
-							<h2>Say Hello</h2>
-							<h4>we are always ready to serve you!</h4>
+							<h2>สวัสดี</h2>
+							<h4>เราพร้อมให้บริการคุณเสมอ!</h4>
 						</div>
 						<div class="contact-form wow fadeInUp" data-wow-delay="0.7s">
 							<form id="contact-form" method="post" action="#">
-								<input name="name" type="text" class="form-control" placeholder="Your Name" required>
-								<input name="email" type="email" class="form-control" placeholder="Your Email" required>
-								<textarea name="message" class="form-control" placeholder="Message" rows="5" required></textarea>
-								<input type="submit" class="form-control submit" value="SEND MESSAGE">
+								<input name="name" type="text" class="form-control" placeholder="ชื่อ" required>
+								<input name="email" type="email" class="form-control" placeholder="อีเมล์" required>
+								<textarea name="message" class="form-control" placeholder="ข่าวสาร" rows="5" required></textarea>
+								<input type="submit" class="form-control submit" value="ส่งข้อความ">
 							</form>
 						</div>
 					</div>
@@ -103,20 +102,20 @@
 			<div class="container">
 				<div class="row">
 					<div class="wow fadeInUp col-md-4 col-sm-4" data-wow-delay="1.0s">
-						<h3>Contact Detail</h3>
-						<p>169/80-81 Ratchadapisek Road, Ratchadapisek, Bangkok 10400</p>
-						<p>TEL:02-275-8819</p>
-						<p>Email:huaikhwangseafood@gmail.com</p>		
+						<h3>ติดต่อ</h3>
+						<p>169/80-81 ถนน รัชดาภิเษก แขวงรัชดาภิเษก เขตดินแดง กทม 10400</p>
+						<p>โทรศัพท์:02-275-8819</p>
+						<p>อีเมล์:huaikhwangseafood@gmail.com</p>		
 					</div>
 					
 					<div class="wow fadeInUp col-md-4 col-sm-4" data-wow-delay="0.8s">
-						<h3>OFFICAL WeChat</h3>
-						<p>WeChatID:huaikhwangseafood</p>
+						<h3>WeChat อย่างเป็นทางการ</h3>
+						<p>WeChat ID:huaikhwangseafood</p>
 						<img src="../images/secode.jpg" style="width: 100px;"/>
 					</div>
 
 					<div class="wow fadeInUp col-md-4 col-sm-4" data-wow-delay="1.2s">
-						<h3>OPEN EVERYDAY</h3>
+						<h3>ทุกวันเปิด</h3>
 						<!-- <strong>Monday - Firday</strong>
 						<p>11:00 AM - 10:00 PM</p> -->
 						<!-- <strong>Saturday - Sunday</strong> -->
@@ -126,6 +125,8 @@
 				</div>
 			</div>
 		</footer>
+
+		
 		<!-- Copyright section -->
 		<section id="copyright">
 			<div class="container">
