--- a/subthai/location.html
+++ b/subthai/location.html
@@ -79,8 +79,8 @@
 				<div class="row">
 					<div class="col-md-offset-2 col-md-8 col-sm-offset-1 col-sm-10">
 						<div class="wow fadeInUp section-title" data-wow-delay="0.2s">
-							<h2><span class="orange">Where</span> is Our Restaurant?</h2>
-							<h4>The best location in HuaiKhwang area.</h4>
+							<h2><span class="orange">ร้านอาหารของเราอยู่ที่ไหน</span></h2>
+							<h4>สถานที่ที่ดีที่สุดในเขตห้วยขวาง</h4>
 						</div>
 					</div>
 				</div>
@@ -90,7 +90,7 @@
 		<section class="parallax-section about-sec location-map">
 			<div class="container">
 				<div class="row">
-					<h4>Sketch Map</h4>
+					<h4>แผนที่ของเรา</h4>
 					<div class="col-md-offset-2 col-md-8 col-sm-offset-1 col-sm-10">
 						<img class="img-responsive" src="../images/location/location.png" style="border: 2px solid orangered;"/>
 					</div>
@@ -112,7 +112,7 @@
 		<section class="parallax-section about-sec location-map">
 			<div class="container">
 				<div class="row">
-					<h4>Outer Appearance</h4>
+					<h4>ลักษณะด้านนอก</h4>
 					<div class="location-map col-md-offset-2 col-md-8 col-sm-offset-1 col-sm-10">
 						<img class="img-responsive" src="../images/location/building1.jpg" style="border: 2px solid orangered;"/>
 					</div>
@@ -127,20 +127,20 @@
 			<div class="container">
 				<div class="row">
 					<div class="wow fadeInUp col-md-4 col-sm-4" data-wow-delay="1.0s">
-						<h3>Contact Detail</h3>
-						<p>169/80-81 Ratchadapisek Road, Ratchadapisek, Bangkok 10400</p>
-						<p>TEL:02-275-8819</p>
-						<p>Email:huaikhwangseafood@gmail.com</p>		
+						<h3>ติดต่อ</h3>
+						<p>169/80-81 ถนน รัชดาภิเษก แขวงรัชดาภิเษก เขตดินแดง กทม 10400</p>
+						<p>โทรศัพท์:02-275-8819</p>
+						<p>อีเมล์:huaikhwangseafood@gmail.com</p>		
 					</div>
 					
 					<div class="wow fadeInUp col-md-4 col-sm-4" data-wow-delay="0.8s">
-						<h3>OFFICAL WeChat</h3>
-						<p>WeChatID:huaikhwangseafood</p>
+						<h3>WeChat อย่างเป็นทางการ</h3>
+						<p>WeChat ID:huaikhwangseafood</p>
 						<img src="../images/secode.jpg" style="width: 100px;"/>
 					</div>
 
 					<div class="wow fadeInUp col-md-4 col-sm-4" data-wow-delay="1.2s">
-						<h3>OPEN EVERYDAY</h3>
+						<h3>ทุกวันเปิด</h3>
 						<!-- <strong>Monday - Firday</strong>
 						<p>11:00 AM - 10:00 PM</p> -->
 						<!-- <strong>Saturday - Sunday</strong> -->
@@ -150,7 +150,7 @@
 				</div>
 			</div>
 		</footer>
-		
+
 		<!-- Copyright section -->
 		<section id="copyright">
 			<div class="container">
