change the content for main page with cn,thai,eng

--- a/subcn/index.html
+++ b/subcn/index.html
@@ -175,7 +175,7 @@
 							</div>
 							<img src="../images/gallery-img13.jpg" width="300px" />
 							<h3>特色佳肴</h3>
-							<p>我们选择同一天在泰国深海捕捞并彻底清洗的新鲜海鲜，阿拉斯加螃蟹及各种大龙虾更是进口自国外。</p>
+							<p>食材精选自深海捕捞的鲜活海鲜及贝类，主打料理阿拉斯加螃蟹及各种大龙虾更是进口自国外。</p>
 						</div>
 					</div>
 
@@ -186,7 +186,7 @@
 							</div>
 							<img src="../images/gallery-img2.jpg" width="300px" />
 							<h3>推荐菜品</h3>
-							<p>推荐菜品口味极多样，辛辣，甜，酸，咸，各种口味都在汇聚在舌尖之上，丰富多层的味道在味蕾上绽放。</p>
+							<p>我们以打造美味、品质、新鲜的精致海鲜料理为理念，主营港式及新马泰特色海鲜菜肴。</p>
 						</div>
 					</div>
 					
@@ -197,7 +197,7 @@
 							</div>
 							<img src="../images/drinks.jpg" width="300px" />
 							<h3>可口饮料</h3>
-							<p>我们提供各种特色饮品，特色饮品口感醇厚，甜美。各种各样的鲜榨果汁，多种啤酒喝红酒供您选择。</p>
+							<p>我们提供各种各样的鲜榨果汁以及特色饮品，更有多种啤酒和红酒供您选择。</p>
 						</div>
 					</div>
 
@@ -247,7 +247,7 @@
 								<a href="menu.html">
 									<h3 class="media-heading">大厨推荐</h3>
 								</a>
-								<p>我们的主厨对所有菜品质量的重视也确保了美味的时令菜肴。</p>
+								<p>我们的主厨对菜品的质量极其重视，以确保菜肴的美味和新鲜。</p>
 							</div>
 						</div>
 
@@ -261,7 +261,7 @@
 									<h3 class="media-heading">鲜活海鲜</h3>
 								</a>
 								<p>
-									享受简约时尚的环境和现代菜单，包括鱼，龙虾，螃蟹等！
+									正如酒楼名称所示，酒楼内提供各种各样的鲜活的海鲜，搭配不同的料理方式，做出道道美味、回味无穷、色味俱佳的海鲜菜肴。
 								</p>
 							</div>
 						</div>
@@ -276,7 +276,7 @@
 								  <h3 class="media-heading">可口饮品</h3>
 								</a>
 								<p>
-									提供各种各样精酿啤酒（包括当地酿造和进口精酿啤酒），葡萄酒和烈酒。
+									酒楼内提供各种各样精酿啤酒（包括当地酿造和进口精酿啤酒）以及葡萄酒和各式烈酒。
 								</p>
 							</div>
 						</div>
@@ -293,7 +293,7 @@
 									<h3 class="media-heading">海鲜推荐</h3>
 								</a>
 								<p>
-									野生捕捞鱼类，贝类和其他海鲜，肉类更加光滑和甜美。
+									酒楼内的食材精选自深海捕捞的鲜活海鲜及贝类，口感更加鲜滑甜美。
 								</p>
 							</div>
 						</div>
@@ -308,7 +308,7 @@
 									<h3 class="media-heading">特色佳肴</h3>
 								</a>
 								<p>
-									您会发现各种新鲜的鱼类，诱人的牛肉，家禽和素食特色菜。
+									酒楼内拥有简约时尚的就餐环境以及精美的食物菜单。菜单上包括从肉类、海鲜、素食再到东南亚特色料理，均都让人垂涎欲滴。
 								</p>
 							</div>
 						</div>
@@ -323,7 +323,7 @@
 									<h3 class="media-heading">精美甜点</h3>
 								</a>
 								<p>
-									我们为顾客提供各种精美甜点和新鲜的水果。
+									我们为顾客提供各种新鲜烘焙的精美甜点和时令鲜榨果汁。
 								</p>
 							</div>
 						</div>
