--- a/subeng/index.html
+++ b/subeng/index.html
@@ -161,7 +161,7 @@
 					<div class="col-md-offset-2 col-md-8 col-sm-offset-1 col-sm-10">
 						<div class="wow fadeInUp section-title" data-wow-delay="0.2s">
 							<h2>HuaiKhwang <span class="orange">Seafood</span></h2>
-							<h4>We offer a wide range of foods for you to choose from.</h4>
+							<h4>Whether you choose a Hong Kong, Malaysia, Singapore or Thai flavour dinner, you will always remember it as the perfect gift.</h4>
 						</div>
 					</div>
 
@@ -174,7 +174,7 @@
 							</div>
 							<img src="../images/gallery-img13.jpg" width="300px" />
 							<h3>SPECIAL DISH</h3>
-							<p>We select fresh seafood caught in the deep sea of Thailand on the same day and have been thoroughly cleaned.</p>
+							<p>Seafood such as lobster, Alaska Crab, shellfish, clams and fish is procured live, selectively from reliable sources.</p>
 						</div>
 					</div>
 
@@ -185,7 +185,7 @@
 							</div>
 							<img src="../images/gallery-img2.jpg" width="300px" />
 							<h3>RECOMMEND</h3>
-							<p>Spicy, sweet, sour, salty, each taste is on the "tongue", but no one can dominate the taste buds.</p>
+							<p>Experience the authentic Southeast Asian cuisine in Bangkok with renowned rich seasoning taste and tradition of these country.</p>
 						</div>
 					</div>
 					
