--- a/subthai/index.html
+++ b/subthai/index.html
@@ -161,7 +161,7 @@
 					<div class="col-md-offset-2 col-md-8 col-sm-offset-1 col-sm-10">
 						<div class="wow fadeInUp section-title" data-wow-delay="0.2s">
 							<h2>ภัตตาคารห้วยขวาง<span class="orange">ซีฟู้ด</span></h2>
-							<h4>เรานำเสนอความหลากหลายของอาหารสำหรับคุณที่จะเลือกจาก</h4>
+							<h4>ร้านอาหารของเราเป็นสถานที่ที่เหมาะสำหรับมื้อค่ำแสนโรแมนติกที่พิเศษ</h4>
 						</div>
 					</div>
 
@@ -174,7 +174,7 @@
 							</div>
 							<img src="../images/gallery-img13.jpg" width="300px" />
 							<h3>จานพิเศษ</h3>
-							<p>เราเลือกอาหารทะเลสดใหม่ที่ติดอยู่ในทะเลลึกแห่งประเทศไทยในวันเดียวกันและได้รับการทำความสะอาดอย่างละเอียด</p>
+							<p>ในการตั้งค่าเขตร้อนที่ยอดเยี่ยมนี้คุณจะได้เพลิดเพลินกับอาร์เรย์ที่โดดเด่นของอาหารไทยและอาหารทะเลกที่จับคู่กับทางเลือกของที่มีคุณภาพดีไวน์นานาชาติ</p>
 						</div>
 					</div>
 
@@ -185,7 +185,7 @@
 							</div>
 							<img src="../images/gallery-img2.jpg" width="300px" />
 							<h3>แนะนำ</h3>
-							<p>เผ็ดหวานเปรี้ยวรสเค็มแต่ละรสชาติอยู่ที่ "ลิ้น" ดังนั้นทุกคนจะมีประสบการณ์ที่ดี</p>
+							<p>ภัตตาคารของเราเก็บรักษาอาหารทะเลต่าง ๆ เช่น ล็อบสเตอร์ ปูอลาสกา กุ้ง หอย แบบสดๆ ซึ่งนำเข้าจากต่างประเทศที่ได้มาตรฐานและน่าเชื่อถือ</p>
 						</div>
 					</div>
 					
@@ -196,7 +196,7 @@
 							</div>
 							<img src="../images/drinks.jpg" width="300px" />
 							<h3>เครื่องดื่มพิเศษ</h3>
-							<p>เครื่องดื่มพิเศษที่ผลิตโดยร้านนี้ทั้งลิ้มรสกลมกล่อมและหวาน เรามีเครื่องดื่มแบบพิเศษมากมาย!</p>
+							<p>มหลากหลายของเครื่องดื่มที่มีแอลกอฮอล์และไม่มีแอลกอฮอล์และสามารถผสมขึ้นค็อกเทลพิเศษสำหรับคุณเพลิดเพลินไปกับ</p>
 						</div>
 					</div>
 
